prod/access-control-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-control-backend
spec:
  selector:
    matchLabels:
      app: access-control-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: access-control-backend
    spec:
      containers:
      - name: access-control-backend
        image: danielneset/bachelor-access-control-backend:prod-694236f4761c5a946a4f792aff02b922e5b2aaec
        ports:
        - containerPort: 8080
          protocol: TCP
        env:
          - name: PORT
            value: "8080"
          - name: DDL
            value: "update"
          - name: DB_HOST
            value: "mysql"
          - name: "DB_PORT"
            value: "3306"
          - name: "DB_NAME"
            value: "ships"
          - name: "DB_USERNAME"
            value: "root"
          - name: "DB_PASSWORD"
            valueFrom:
              secretKeyRef:
                name: mysql-secret
                key: mysql-root-password
