prod/access-control-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-control-backend-service
spec:
  selector:
    app: access-control-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
