prod/access-control-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-control-frontend
spec:
  selector:
    matchLabels:
      app: access-control-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: access-control-frontend
    spec:
      containers:
      - name: access-control-frontend
        image: danielneset/bachelor-access-control-frontend:prod-web-11f7b517c55acb9ed9a55ff4a924cacfa969138a
        ports:
        - containerPort: 3000
          protocol: TCP
        env:
          - name: AUTH_SECRET
            valueFrom:
              secretKeyRef:
                name: next-auth
                key: next-auth-key
          - name: NEXT_PUBLIC_BACKEND_BASE_URL
            value: "https://admin.flightfinder.space"
          - name: AUTH_TRUST_HOST
            value: "true"
          - name: BACKEND_INTERNAL_URL
            value: "http://access-control-backend-service:8080"
          - name: NEXTAUTH_URL
            value: "https://flightfinder.space"
