prod/consumer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consumer-service
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - flightfinder.space
    secretName: origin-ca-tls
  rules:
  - host: flightfinder.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consumer-service
            port:
              number: 3000
