prod/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_grpc_web
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_grpc_web
                    codec_type: AUTO
                    http_filters:
                      - name: envoy.filters.http.grpc_web
                      - name: envoy.filters.http.cors
                      - name: envoy.filters.http.router
                    route_config:
                      name: grpc_web_routes
                      virtual_hosts:
                        - name: grpc_web
                          domains: ["*"]
                          cors:
                            allow_origin_string_match:
                              - prefix: "*"
                            allow_methods: "POST, OPTIONS"
                            allow_headers: "content-type,x-grpc-web,x-user-agent"
                            max_age: "1728000"
                          routes:
                            - match: { prefix: "/" }
                              route:
                                cluster: spring_gateway_grpc
      clusters:
        - name: spring_gateway_grpc
          connect_timeout: 0.5s
          type: LOGICAL_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          load_assignment:
            cluster_name: spring_gateway_grpc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: gateway-service.default.svc.cluster.local
                          port_value: 9090
