prod/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: danielneset/bachelor-gateway:prod-cea787cacb1ffa843986693d1b8ddefdb96f7c7f
        ports:
        - name: http
          containerPort: 8080
        - name: grpc
          containerPort: 9090
        env:
          - name: REST_ROUTE_URI
            value: "http://restapi-service:8080"
          - name: PORT
            value: "8080"
          - name: GRPC_PORT
            value: "9090"
          - name: DDL
            value: "update"
          - name: DB_HOST
            value: "mysql"
          - name: "DB_PORT"
            value: "3306"
          - name: "DB_NAME"
            value: "prod"
          - name: "DB_USERNAME"
            value: "root"
          - name: "DB_PASSWORD"
            valueFrom:
              secretKeyRef:
                name: mysql-secret
                key: mysql-root-password
          - name: "JWT_KEY"
            valueFrom:
              secretKeyRef:
                name: api-jwt
                key: api-jwt-key
