prod/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    app: phpmyadmin
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
