prod/producer-rest-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producerrestapi
spec:
  selector:
    matchLabels:
      app: producerrestapi
  replicas: 1
  template:
    metadata:
      labels:
        app: producerrestapi
    spec:
      containers:
      - name: producerrestapi
        image: danielneset/bachelor-producer-rest-api:prod-1f63f541afd5047901efa1b0b2cb53f5579ec1b1
        ports:
        - containerPort: 8080
          protocol: TCP
        env:
          - name: PORT
            value: "8080"
          - name: DDL
            value: "update"
          - name: DB_HOST
            value: "mysql"
          - name: "DB_PORT"
            value: "3306"
          - name: "DB_NAME"
            value: "prod"
          - name: "DB_USERNAME"
            value: "root"
          - name: "DB_PASSWORD"
            valueFrom:
              secretKeyRef:
                name: mysql-secret
                key: mysql-root-password
          - name: "JWT_KEY"
            valueFrom:
              secretKeyRef:
                name: api-jwt
                key: api-jwt-key
          - name: "RABBITMQ_HOST"
            value: "rabbitmq"
