prod/producer-rest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producerrestapi-service
spec:
  selector:
    app: producerrestapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
