prod/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
      - name: websocket
        image: danielneset/bachelor-websocket:prod-5d448d5a344ccc44951f2f69dd2e77acf2408485
        ports:
          - containerPort: 8080
            name: http
        env:
          - name: PORT
            value: "8080"
          - name: DDL
            value: "update"
          - name: DB_HOST
            value: "mysql"
          - name: DB_PORT
            value: "3306"
          - name: DB_NAME
            value: "prod"
          - name: DB_USERNAME
            value: "root"
          - name: DB_PASSWORD
            valueFrom:
              secretKeyRef:
                name: mysql-secret
                key: mysql-root-password
          - name: RABBITMQ_HOST
            value: "rabbitmq"
          - name: RABBITMQ_PORT
            value: "5672"
          - name: RABBITMQ_USERNAME
            value: "user"
          - name: RABBITMQ_PASSWORD
            valueFrom:
              secretKeyRef:
                name: rabbit
                key: rabbit-key
