prod/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  selector:
    app: websocket
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
